Fixed some overlap issues and cosmetics

--- a/synthstyle.less
+++ b/synthstyle.less
@@ -77,7 +77,6 @@ float: left;
 opacity: 0.8;
 width: calc(@synthWidth * 0.3-2px);
 height:calc(@synthHeight * 1-2px);
-
 .knob {
        float: left;
        align: center;
@@ -106,7 +105,7 @@ label {
    font-size: 11px;
    font-weight: bold;
    margin-right: 3px;
-   background: #FFFFFF;
+   color: #E0981A;
    
 }
 
